# ab-test-toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: copilot-instructions.md
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.streamlit/: config.toml
ab_test_toolkit/: __init__.py  bayesian.py  cuped.py  data_generator.py  frequentist.py  io.py  power.py  recommendation.py  segmentation.py  srm.py  visualization.py
app/: app.py  app_utils.py
app/pages/: 01_experiment_design.py  02_analyze_results.py  03_sensitivity_analysis.py  04_case_study_demo.py
notebooks/: case_study.ipynb
specs/001-ab-test-toolkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ab-test-toolkit/contracts/: public-api.md
tests/: conftest.py
tests/integration/: test_notebook.py  test_pipeline.py  test_streamlit.py
tests/unit/: test_bayesian.py  test_cuped.py  test_data_generator.py  test_frequentist.py  test_io.py  test_power.py  test_r3_p1_fixes.py  test_r4_fixes.py  test_recommendation.py  test_segmentation.py  test_srm.py  test_visualization.py
